[package]
name = "rust-crates-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
hyper = "0.14.26"
reqwest = "0.11"
colored = "2.0"
tokio = { version = "1", features = ["full"] }
clap = { version="4.1.4",features=["derive"]}
futures = "0.3"
